--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "lru-cache": "^9.1.1",
     "mysql": "^2.18.1",
